Fixed Page overflow for Desktop https://github.com/felicity-iiith/felicity18-website/issues/8

--- a/static/css/webslides.css
+++ b/static/css/webslides.css
@@ -1504,7 +1504,7 @@ form[class*='bg-'] {
 
 @media (min-width: 768px) {
   [class*='content-'] {
-    width: 50%; }
+    width: 100%; }
     [class*='content-']:after, [class*='content-']:before {
       content: '';
       display: table; }
